fixed issue with overlay on smaller screens

--- a/media.css
+++ b/media.css
@@ -383,4 +383,8 @@
         width: 30px;
         height: 30px;
     }
+
+    .show-overlay {
+        width: 100vw;
+    }
 }
