--- a/overlay.css
+++ b/overlay.css
@@ -7,7 +7,6 @@
         padding: 1rem 0;
         height: 100vh;
         height: 100vh;
-        width: 100%;
         width: 0;
         position: fixed;
         /* position: absolute; */
@@ -16,9 +15,13 @@
         transition: .7s;
         z-index: 1;
         overflow-x: hidden;
-        max-width: 40vw;        
+        /* max-width: 40vw;         */
         border-top-left-radius: 15px;
         border-bottom-left-radius: 15px;
+    }
+
+    .show-overlay {
+        width: 40vw;
     }
 
     .overlay > .container {
